--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             const urls = [
                 'https://raw.githubusercontent.com/XIU2/TrackersListCollection/master/all.txt',
                 'https://raw.githubusercontent.com/ngosang/trackerslist/master/trackers_all.txt'
-            ];
+            ].map(url => 'https://cors-anywhere.herokuapp.com/' + url);;
             
             try {
                 const data = await Promise.all(urls.map(url => fetch(url).then(response => response.text())));
